2010-04-20  Thomas E. Dickey  <dickey@invisible-island.net>

	* package/debian/compat: RCS_BASE

2004-12-31  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/unmap/map_s.c: add utf8-decoding

	* src/unmap/map.c: typo

	* src/unmap/map.c: add -u option

	* src/unmap/unmap.c: add -u option, for UTF-8

	* src/unmap/unmap_s.c: adapted UTF-8 decoding from xterm

	* src/unmap/chrcount.c: added utf8 param to map()

	* src/unmap/unmap.h: include <string.h>

	* src/unmap/map_s.c: add utf8 param to map()

	* src/unmap/chrcount.c, src/unmap/map.c, src/unmap/map_s.c, src/unmap/unmap.c, src/unmap/unmap_s.c, src/unmap/unmap.h:
	indent'd

2003-11-29  Thomas E. Dickey  <dickey@invisible-island.net>

	* install-sh: RCS_BASE

2003-04-12  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/acsplit/acsplit.c:
	make dashes check for 72-columns, to avoid conflict with headers produced
	by "ci-aclocal"

2002-12-30  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/acsplit/acmerge.c:
	ignore attempts to merge stuff such as the AC_REVISION that I have embedded
	in vile's aclocal.m4

2002-02-16  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/hex/hex.c: add utf-8 output

	* src/hex/hex.c: indent'd

2002-02-10  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/acsplit/acmerge.c: add -v option

	* src/acsplit/acsplit.c: one remaining fix for "will finish" logic

	* src/acsplit/acsplit.c:
	add logic to force macros to be flushed out after the ending parenthesis or
	bracket, even if the next line is not dashes.  (Dashes are still needed to
	make a header comment separate from the macro contents).

	* src/acsplit/acsplit.c:
	improve verboseness a little by always emitting path:number for the interesting
	messages.  Add a usage message.

	* src/acsplit/acmerge.c: add logic to suppress dashes

	* src/acsplit/acmerge.c:
	fixes to avoid emitting a dashed line in the header when we see a blank line

	* src/acsplit/acsplit.c: